--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,48 @@
-click==7.1.2
-Flask==1.1.2
+appdirs==1.4.4
+astroid==2.2.5
+atomicwrites==1.4.0
+attrs==19.3.0
+Babel==2.8.0
+certifi==2018.10.15
+chardet==3.0.4
+Click==7.0
+colorama==0.4.1
+distlib==0.3.1
+filelock==3.0.12
+Flask==1.0.2
+Flask-Babel==1.0.0
 Flask-Cors==3.0.8
+Flask-Session==0.3.1
+Flask-SocketIO==3.3.2
 gunicorn==20.0.4
-itsdangerous==1.1.0
-Jinja2==2.11.2
+idna==2.7
+importlib-metadata==1.7.0
+iniconfig==1.0.1
+isort==4.3.15
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
-six==1.15.0
-Werkzeug==1.0.1
+mccabe==0.6.1
+more-itertools==8.4.0
+packaging==20.4
+pluggy==0.13.1
+psycopg2==2.7.5
+py==1.9.0
+pybabel==0.0.0.dev0
+pylint==2.3.1
+pyparsing==2.4.7
+pytest==6.0.1
+python-engineio==3.5.1
+python-socketio==3.1.2
+pytz==2020.1
+requests==2.20.1
+six==1.12.0
+SQLAlchemy==1.2.12
+toml==0.10.1
+typed-ast==1.3.1
+urllib3==1.24.1
+virtualenv==20.0.28
+Werkzeug==0.14.1
+wrapt==1.11.1
+zipp==3.1.0
