--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ python:
   - "3.7"
 install:
   - pip install -r requirements.txt
-# command to run tests
+before_script:
+  - sudo chmod 755 ./bin/docker_gunicorn_start.sh
 script:
   - ./bin/docker_gunicorn_start.sh
   - sleep 5
