--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,14 @@
 language: python
 python:
   - "3.7"
+before_install:
+    - apt-get update
+    - apt-get install dos2unix
 install:
   - pip install -r requirements.txt
 before_script:
-  - sudo chmod 755 ./bin/docker_gunicorn_start.sh
+    - dos2unix ./bin/docker_gunicorn_start.sh
+    - chmod +x ./bin/docker_gunicorn_start.sh
 script:
   - ./bin/docker_gunicorn_start.sh
   - sleep 5
