--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,8 @@ language: python
 python:
   - "3.7"
 before_install:
-    - apt-get update
-    - apt-get install dos2unix
+    - sudo apt-get update
+    - sudo apt-get install dos2unix
 install:
   - pip install -r requirements.txt
 before_script:
