--- a/.travis.yml
+++ b/.travis.yml
@@ -16,11 +16,11 @@ script:
 #  - ./bin/docker_gunicorn_start.sh daemon
 #  - sleep 5
   - cd tests ; pytest
-#deploy:
-#  provider: heroku
-#  api_key: $HEROKU_API_KEY
-#  app: resume-depo
-after-success:
-  - heroku auth:token
-  - heroku container:push web --app resume-depo
-  - heroku container:release web --app resume-depo
+deploy:
+  provider: heroku
+  api_key: $HEROKU_API_KEY
+  app: resume-depo
+#after-success:
+#  - heroku auth:token
+#  - heroku container:push web --app resume-depo
+#  - heroku container:release web --app resume-depo
