--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ script:
   - ls -l
   - sleep 5
   - cd tests ; pytest
+before_deploy:
+  - cd ..
 deploy:
   provider: heroku
   api_key: $HEROKU_API_KEY
