--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ python-engineio==3.13.1
 python-socketio==4.6.0
 pytz==2020.1
 requests==2.24.0
+selenium==3.141.0
 six==1.15.0
 toml==0.10.1
 typed-ast==1.4.1
