--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.7"
 script:
   - export PATH=$(pwd)/tests/selenium_drivers:$PATH
+  - chmod 755 tests/selenium_drivers/chromedriver
+  - chmod 755 tests/selenium_drivers/geckodriver
   - cd tests ; pytest -v
 before_deploy:
   - cd ..
