--- a/k8s/ingress/resume-website.yaml
+++ b/k8s/ingress/resume-website.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
 spec:
-  ingressClassName: nginx
+  ingressClassName: public
   rules:
   - http:
       paths:
