--- a/pulumi/Pulumi.yaml
+++ b/pulumi/Pulumi.yaml
@@ -2,5 +2,10 @@ name: resume-website
 runtime:
   name: python
   options:
-    virtualenv: venv
+    virtualenv: ./.venv
 description: Depo Resume Website
+template:
+  config:
+    aws:region:
+      description: The AWS region to deploy into
+      default: eu-south-1
