--- a/helm/resume-website/www-maculade-com-cert.yaml
+++ b/helm/resume-website/www-maculade-com-cert.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   secretName: www-maculade-com-tls
   issuerRef:
-    name: resume-website-production
+    name: depo-issuer-production
     kind: ClusterIssuer
   commonName: www.maculade.com
   dnsNames:
