--- a/helm/resume-website/cluster-issuer.yaml
+++ b/helm/resume-website/cluster-issuer.yaml
@@ -1,7 +1,7 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: resume-website-production
+  name: depo-issuer-production
 spec:
   acme:
     # You must replace this email address with your own.
@@ -11,7 +11,7 @@ spec:
     server: https://acme-staging-v02.api.letsencrypt.org/directory
     privateKeySecretRef:
       # Secret resource that will be used to store the account's private key.
-      name: resume-website-production-issuer-key
+      name: depo-issuer-production-key
     # Add a single challenge solver, HTTP01 using nginx
     solvers:
     - http01:
