--- a/helm/resume-website/values.yaml
+++ b/helm/resume-website/values.yaml
@@ -46,11 +46,11 @@ service:
   port: 80
 
 ingress:
-  enabled: true
+  enabled: false
   annotations:
     #traefik.ingress.kubernetes.io/router.entrypoints: web
-    #traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
-    ingress.kubernetes.io/ssl-redirect: "true"
+    #traefik.ingress.kubernetes.io/router.middlewares: resume-website-redirect-https@kubernetescrd
+    #ingress.kubernetes.io/ssl-redirect: "true"
   hosts:
     - host: "www.maculade.com"
       paths:
